--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -32,7 +32,7 @@
         </div>
         <h1 id="h1page">Thread</h1>
         <div id="make">
-            <label for="yourthread">Post Thread</label>
+            <label for="yourthread" style="color: #635666">Post Thread</label>
             <br>
             <select name="category" id="category"></select>
             <br>
