--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,6 +31,6 @@
 </html>
 <script>
     function setSession() {
-        localStorage.setItem('user', document.getElementById('username').value);
+        localStorage.setItem('username', document.getElementById('username').value);
     }
 </script>
